@@ -69,7 +69,7 @@ var B_ACTIONS=[
 ];
 
 const MAX_GRID_TEXT_LEN = 80;
-const TERM_PLACEHOLDER        = "__TAGGEDINPUT__";
+const TERM_PLACEHOLDER = "__TAGGEDINPUT__";
 const ALBUM_SORT_PLACEHOLDER  = "AS";
 const ARTIST_ALBUM_SORT_PLACEHOLDER = "AAS";
 const TOP_ID_PREFIX = "top:/";
